❌ Stat to track whether still collecting or not?
❌ Fixed issue where sorting/searching/filtering collection would crash the app if user tries to change window state (minimize or maximize)

v6.0.0.0 - Oct 9th, 2024
✅ Added "Genre" series data
✅ Added "Genre" collection filters
🔥 Fixed issue where Refresh would sometimes not pull data from the correct source
🔥 Fixed issue where getting a series by title on MangaDex as a backup to AniList would fail
🔥 Fixed advanced filter notes filter not accepting double quotes
🔥 Spreadsheet export no longer prints the rating "-1" when user hasn't rated a series yet
📜 Edit Series Window
- ✅ Added genres ListBox to select genres for a series, need to click save at the bottom to save changes
- 🔥 Fixed issue where refreshing a series would cause it to load and save another cover image
📜 Stats Window
- ✅ Added Genre Bar chart
- ✅ Changed stats window layout and design of pie charts
- 🔥 Fixed chart colors not displaying correctly

v5.2.8.0 - Oct 7th, 2024
🔥 Fixed volumes read title text
🔥 Fixed series card edit button size
🔥 Fixed in-app version

v5.2.7.0 - Oct 4th, 2024
✅ Added new window that allows for better editing series info, replacing left & right bottom button popup panes
✅ Removed currencies "Rp", "RM", "﷼", "د.إ", "د. ك"
✅ Increased max series value from 999999999.99 to 999999999999999999.99
📜 Add Series Window
- ✅ Refactored the layout to accommodate larger series value number now accepted
🔥 Fixed issue where adding a new series -> searching for it -> deleting search, crashes the app
🔥 Fixed issue where advanced search would sometimes not run

v5.2.6 - Sept 16th, 2024
✅ Taking screenshots now includes the current filter/sort if it is not "None" or "Query" in the image name and the language
🔥 Fixed issue where FireFox browser would start instances and not be headless
🔥 Fixed issue where filter/sort would persist if language if the current collection is filtered or sorted