@@ -14,6 +14,6 @@
 	</targets>
 
 	<rules>
-		<logger name="TsundokuLogs" minlevel="Debug" writeTo="TsundokuLogs" />
+		<logger name="TsundokuLogs" minlevel="Info" writeTo="TsundokuLogs" />
 	</rules>
 </nlog>
