@@ -17,8 +17,8 @@
 		<SelfContained>True</SelfContained>
 		<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
 		<Version>6.0.0</Version>
-		<FileVersion>6.0.0.0</FileVersion>
-		<AssemblyVersion>6.0.0.0</AssemblyVersion>
+		<FileVersion>6.0.0.1</FileVersion>
+		<AssemblyVersion>6.0.0.1</AssemblyVersion>
 		<RepositoryUrl>https://github.com/Sigrec/Tsundoku</RepositoryUrl>
         <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
